--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ clap = { version = "4.2.7", features = ["derive"] }
 eframe = "0.21.3"
 env_logger = "0.10.0"
 heed = "0.20.0-alpha.0"
+rfd = "0.11.3"
