Be able to save and show escaped entries

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,10 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.71"
-bstr = "1.4.0"
 clap = { version = "4.2.7", features = ["derive"] }
 eframe = "0.21.3"
 env_logger = "0.10.0"
 heed = "0.20.0-alpha.0"
+once_cell = "1.17.1"
 rfd = "0.11.3"
+stfu8 = "0.2.6"
