--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.71"
 clap = { version = "4.2.7", features = ["derive"] }
-eframe = "0.21.3"
+eframe = "0.22.0"
+egui_extras = "0.22.0"
 env_logger = "0.10.0"
 heed = "0.20.0-alpha.0"
 once_cell = "1.17.1"
