--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,10 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.71"
-eframe = "0.22.0"
-egui_extras = "0.22.0"
-egui_tiles = "0.1.0"
+eframe = "0.26.0"
+egui_extras = "0.26.0"
+egui_tiles = "0.7.2"
 env_logger = "0.10.0"
-heed = "0.20.0-alpha.0"
-once_cell = "1.17.1"
-rfd = "0.11.3"
+heed = { version = "0.20.0", default-features = false, features = ["read-txn-no-tls"] }
+rfd = "0.14.1"
 stfu8 = "0.2.6"
